--- a/templates/ansible/group_vars/all/config.yml.erb
+++ b/templates/ansible/group_vars/all/config.yml.erb
@@ -13,6 +13,7 @@ rails_env: development
   <% end %>
 <% end %>
 
+os_name: '{{ vm_os }}'
 app_name: '{{ vm_name }}'
 user_name: vagrant
 group_name: vagrant
@@ -33,6 +34,14 @@ unicorn_config_path: "{{ app_config_path }}/unicorn.{{ rails_env }}.rb"
 unicorn_pid_path: "{{ app_temp_path }}/unicorn.{{ rails_env }}.pid"
 unicorn_stderr_path: "{{ app_logs_path }}/unicorn.err.log"
 unicorn_stdout_path: "{{ app_logs_path }}/unicorn.log"
+
+puma_sock_path: "/tmp/puma.{{ rails_env }}.sock"
+puma_config_path: "{{ app_config_path }}/puma.{{ rails_env }}.rb"
+puma_pid_path: "{{ app_temp_path }}/puma.{{ rails_env }}.pid"
+puma_stderr_path: "{{ app_logs_path }}/puma.err.log"
+puma_stdout_path: "{{ app_logs_path }}/puma.log"
+
+sidekiq_pid_path: "{{ app_temp_path }}/sidekiq.{{ rails_env }}.pid"
 
 ruby_user_name: '{{ "root" if ruby_install == "package" else user_name }}'
 
