--- a/templates/ansible/roles/redis/templates/redis.rb.j2
+++ b/templates/ansible/roles/redis/templates/redis.rb.j2
@@ -1,3 +1,5 @@
 # {{ ansible_managed }}
 
-$redis = Redis.new(:host => 'localhost', :port => 6379)
+redis_server_url = ENV["REDIS_URL"]  || 'redis://localhost:6379'
+
+$redis = Redis.new url: redis_server_url
