--- a/templates/environment/server/inventory.erb
+++ b/templates/environment/server/inventory.erb
@@ -1,4 +1,4 @@
-<%= params[:host] %> ansible_ssh_port=<%= params[:port] || 22 %> ansible_ssh_user=<%= params[:username] %>
+<%= params[:host] %> ansible_ssh_port=<%= params[:port] || 22 %>
 
 [all]
 <%= params[:host] %>
