Add list of features

--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -14,6 +14,43 @@ a.anchor#home
           '  and
           a href='http://www.ansible.com/' <strong>ansible</strong>
           ' .
+        .row
+          .col-lg-5
+            h2 Features
+            ul.features
+              li
+                span.glyphicon.glyphicon-ok-sign
+                ' Server provision
+              li
+                span.glyphicon.glyphicon-ok-sign
+                ' Code deployment
+              li
+                span.glyphicon.glyphicon-ok-sign
+                ' Multiple environments
+          .col-lg-4
+            h2 Technologies
+            ul.features
+              li
+                span.glyphicon.glyphicon-ok-sign
+                ' ansible
+              li
+                span.glyphicon.glyphicon-ok-sign
+                ' VirtualBox
+              li
+                span.glyphicon.glyphicon-ok-sign
+                ' vagrant
+          .col-lg-3
+            h2 Supported hosts
+            ul.features
+              li
+                span.glyphicon.glyphicon-ok-sign
+                ' Mac OS X
+              li
+                span.glyphicon.glyphicon-ok-sign
+                ' Linux
+              li
+                span.glyphicon.glyphicon-ok-sign
+                ' Windows
         p.button
           a.btn.btn-default.btn-lg href='#vm-settings' Get started
 
