--- a/app/views/boxes/show.html.slim
+++ b/app/views/boxes/show.html.slim
@@ -1,7 +1,10 @@
 .container-fluid
   .row
     .col-lg-5
-      h1 Your virtual box: <kbd>#{@box.vm_name}</kbd>
+      h1
+        = t('.title')
+        ' 
+        <kbd>#{@box.vm_name}</kbd>
       p Make sure you bookmark this page (or save URL somewhere), it's the only way to access your configuration later.
       p
         input.form-control data-copies-itself='yes' id='url' type='text' value=box_url(@box)
