--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -7,13 +7,11 @@ a.anchor#home
     .row
       .col-lg-10.col-lg-offset-1
         h1 <span>rails</span>box
-        h2 Fast and easy Ruby on Rails virtual machines
+        h2 Automate your Ruby on Rails server configuration with ansible
         p
-          ' Ruby developer? Heard about <strong>DevOps</strong> but too busy to learn it? Streamline your development workflow in no time by creating production-like virtual machine with your development environment. Try this extremely simple to use VM configuration tool to create new <strong>Ruby on Rails</strong> server using
-          a href='https://www.vagrantup.com/' <strong>vagrant</strong>
-          '  and
+          ' <strong>railsbox</strong> helps you to start applying best <strong>DevOps</strong> practices in your project by generating
           a href='http://www.ansible.com/' <strong>ansible</strong>
-          ' .
+          '  playbooks for configuring and deploying Ruby on Rails applications. You no longer need to edit a single configuration file on your server and use tools like capistrano for code deployments - all this comes out of the box.
         p.button
           a.btn.btn-default.btn-lg href='#vm-settings' Get started
 
