Add Gemfile parsing

--- a/app/assets/stylesheets/styles/layout.css.scss
+++ b/app/assets/stylesheets/styles/layout.css.scss
@@ -1,6 +1,6 @@
 body {
   padding-top: $navbar-height;
-  background-image: image-url('debut_light.png');
+  background-color: $background-color;
 }
 
 footer {
