--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,8 +3,9 @@ html lang="en"
   head
     = render 'shared/head'
 
-  body ng-app='app.railsbox' data-spy='scroll' data-target='.navbar'
+  body ng-app='app.railsbox' ng-controller='ConfigurationController' data-spy='scroll' data-target='.navbar'
     nav.navbar.navbar-fixed-top.navbar-default
+      notification
       .container
         .navbar-header
           button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"
