--- a/templates/ansible/group_vars/all/config.yml.erb
+++ b/templates/ansible/group_vars/all/config.yml.erb
@@ -35,6 +35,12 @@ unicorn_pid_path: "{{ app_temp_path }}/unicorn.{{ rails_env }}.pid"
 unicorn_stderr_path: "{{ app_logs_path }}/unicorn.err.log"
 unicorn_stdout_path: "{{ app_logs_path }}/unicorn.log"
 
+puma_bind_path: "unix://{{ app_temp_path }}/sockets/puma.{{ rails_env }}.sock"
+puma_config_path: "{{ app_config_path }}/puma.{{ rails_env }}.rb"
+puma_pidfile_path: "{{ app_temp_path }}/pids/puma.{{ rails_env }}.pid"
+puma_stderr_redirect_path: "{{ app_logs_path }}/puma.{{ rails_env }}.err.log"
+puma_stdout_redirect_path: "{{ app_logs_path }}/puma.{{ rails_env }}.log"
+
 ruby_user_name: '{{ "root" if ruby_install == "package" else user_name }}'
 
 use_apt_proxy: false
