--- a/app/views/shared/_flash_messages.html.slim
+++ b/app/views/shared/_flash_messages.html.slim
@@ -1,4 +1,4 @@
 - flash.each do |type, message|
   div class="alert #{bootstrap_class_for(type)} fade in"
-    button class="close" data-dismiss="alert" ×
+    button type='button' class="close" data-dismiss="alert" ×
     = message
