Add ability to click the dropzone

--- a/app/assets/stylesheets/styles/styles.css.scss
+++ b/app/assets/stylesheets/styles/styles.css.scss
@@ -71,6 +71,7 @@ input.ng-invalid[type=text] {
 }
 
 .droparea {
+  cursor: pointer;
   margin-top: 2em;
   border-radius: $border-radius;
   padding: 1px;
