Install the dependency for json 1.8.3 https://github.com/flori/json/issues/253#issuecomment-133676263

--- a/templates/ansible/roles/base/tasks/main.yml.erb
+++ b/templates/ansible/roles/base/tasks/main.yml.erb
@@ -18,6 +18,7 @@
     - python-dev
     - htop
     - git
+    - libgmp3-dev
 <% if params[:databases].include?('postgresql') -%>
     - libpq-dev
 <% end %>
