Move temp directory inside the box (Issue #25) https://github.com/puma/puma/issues/790#issuecomment-149039607 http://stackoverflow.com/a/16404342

--- a/templates/ansible/group_vars/all/config.yml.erb
+++ b/templates/ansible/group_vars/all/config.yml.erb
@@ -23,7 +23,7 @@ ssl_certificate_key_path: /etc/nginx/ssl/{{ server_name }}.key
 app_path: '{{ path if target == "virtualbox" else "{{ path }}/current" }}'
 app_public_path: "{{ app_path }}/public"
 app_config_path: "{{ app_path }}/config"
-app_temp_path: "{{ app_path }}/tmp"
+app_temp_path: "/tmp{{ app_path }}"
 app_logs_path: "{{ app_path }}/log"
 
 releases_path: '{{ path }}/releases'
