--- a/templates/ansible/roles/base/tasks/main.yml.erb
+++ b/templates/ansible/roles/base/tasks/main.yml.erb
@@ -18,7 +18,7 @@
     - python-dev
     - htop
     - git
-    - libgmp3-dev
+    - libgmp-dev
 <% if params[:databases].include?('postgresql') -%>
     - libpq-dev
 <% end %>
