Use postgresql_version variable in tasks & tmpls

--- a/templates/ansible/roles/postgresql/tasks/main.yml.erb
+++ b/templates/ansible/roles/postgresql/tasks/main.yml.erb
@@ -9,11 +9,11 @@
     - python-dev
 
 - name: Configure PostgreSQL - postgresql.conf
-  template: src=postgresql.conf.j2 dest=/etc/postgresql/9.3/main/postgresql.conf
+  template: src=postgresql.conf.j2 dest=/etc/postgresql/{{ postgresql_version }}/main/postgresql.conf
   notify: restart postgresql
 
 - name: Configure PostgreSQL - pg_hba.conf
-  template: src=pg_hba.conf.j2 dest=/etc/postgresql/9.3/main/pg_hba.conf
+  template: src=pg_hba.conf.j2 dest=/etc/postgresql/{{ postgresql_version }}/main/pg_hba.conf
   notify: restart postgresql
 
 <% if params[:docker] -%>
