--- a/templates/ansible/roles/base/tasks/main.yml.erb
+++ b/templates/ansible/roles/base/tasks/main.yml.erb
@@ -1,6 +1,9 @@
 ---
 - name: Update apt cache
-  apt: update_cache=yes
+  apt:
+    update_cache: yes
+    cache_valid_time: 3600
+
 
 - name: Install apt dependencies
   apt: name={{ item }}
