Set the correct database section

--- a/templates/ansible/roles/postgresql/templates/database.yml.j2
+++ b/templates/ansible/roles/postgresql/templates/database.yml.j2
@@ -4,7 +4,7 @@ default: &default
   adapter: postgresql
   pool: 5
 
-development:
+{{ rails_env }}:
   <<: *default
   database: {{ postgresql_db_name }}
 
