--- a/templates/ansible/group_vars/all/config.yml.erb
+++ b/templates/ansible/group_vars/all/config.yml.erb
@@ -20,9 +20,9 @@ user_home_path: '/home/{{ user_name }}'
 ssl_certificate_path: /etc/nginx/ssl/{{ server_name }}.crt
 ssl_certificate_key_path: /etc/nginx/ssl/{{ server_name }}.key
 
-app_path: '{{ path if target == "virtualbox" else path + "/current" }}'
+app_path: '{{ path }}{{ "/current" if target != "virtualbox" }}'
 app_public_path: "{{ app_path }}/public"
-app_config_path: "{{ app_path }}/config"
+app_config_path: '{{ app_path if target == "virtualbox" else shared_path }}/config'
 app_temp_path: "/tmp{{ app_path }}"
 app_logs_path: "{{ app_path }}/log"
 
