--- a/devops/roles/nginx/templates/gzip.conf.j2
+++ b/devops/roles/nginx/templates/gzip.conf.j2
@@ -1,3 +1,3 @@
 gzip_proxied any;
-gzip_types text/plain text/xml text/css application/x-javascript;
+gzip_types text/plain text/xml text/css application/x-javascript application/javascript;
 gzip_vary on;
