--- a/templates/ansible/roles/postgresql/tasks/main.yml.erb
+++ b/templates/ansible/roles/postgresql/tasks/main.yml.erb
@@ -36,10 +36,10 @@
   sudo_user: postgres
 
 - name: Assure that config dir exists
-  file: path={{ app_config_path }} state=directory
+  file: path={{ shared_config_path }} state=directory
 
 - name: Create config/database.yml
-  template: src=database.yml.j2 dest={{ app_config_path }}/database.yml owner={{ user_name }} mode=0600 backup=yes
+  template: src=database.yml.j2 dest={{ shared_config_path }}/database.yml owner={{ user_name }} mode=0600 backup=yes
   when: postgresql_orm in ['activerecord', 'sequel', 'datamapper']
 
 - name: Make sure the postgis extensions are installed
