--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -42,6 +42,8 @@ html lang="en"
           li
             a href='https://github.com/andreychernih/railsbox/issues' Issues
           - if VersionManager.current_version
-            li 
+            li
               ' Version:
               a href='https://github.com/andreychernih/railsbox/releases' = VersionManager.current_version
+          li
+            a href='https://qainstructor.com' online selenium training
