--- a/templates/environment/virtualbox/_virtualbox_config.erb
+++ b/templates/environment/virtualbox/_virtualbox_config.erb
@@ -22,8 +22,10 @@
 
   config.vm.define '<%= params[:vm_name] %>' do |machine|
     machine.vm.hostname = '<%= params[:server_name] %>'
+    <% if ! params[:use_hostname] %>
     <% params[:vm_ports].each_value do |port| -%>
     machine.vm.network 'forwarded_port', :guest => <%= port[:guest] %>, :host => <%= port[:host] %>, :auto_correct => true
+    <% end %>
     <% end %>
 
     machine.vm.box = '<%= params[:vm_os] %>'
@@ -36,3 +38,10 @@
     machine.bindfs.bind_folder '/ansible', '/ansible'
     <% end %>
   end
+
+  <% if params[:use_hostname] %>
+  config.hostmanager.enabled = true
+  config.hostmanager.manage_host = true
+  config.hostmanager.manage_guest = true
+  config.hostmanager.aliases = %w(<%= params[:vm_name] %>.dev www.<%= params[:vm_name] %>.dev *.<%= params[:vm_name] %>.dev)
+  <% end %>
