dont bind all of localhost

--- a/templates/environment/virtualbox/_virtualbox_config.erb
+++ b/templates/environment/virtualbox/_virtualbox_config.erb
@@ -21,8 +21,12 @@
   end
 
   config.vm.define '<%= params[:vm_name] %>' do |machine|
+    <% if params[:use_hostname] %>
+    machine.vm.hostname = '<%= params[:vm_name] %>.dev'
+    <% else %>
     machine.vm.hostname = '<%= params[:server_name] %>'
-    <% if ! params[:use_hostname] %>
+    <% end %>
+    <% if params[:vm_ports].present? %>
     <% params[:vm_ports].each_value do |port| -%>
     machine.vm.network 'forwarded_port', :guest => <%= port[:guest] %>, :host => <%= port[:host] %>, :auto_correct => true
     <% end %>
@@ -43,5 +47,5 @@
   config.hostmanager.enabled = true
   config.hostmanager.manage_host = true
   config.hostmanager.manage_guest = true
-  config.hostmanager.aliases = %w(<%= params[:vm_name] %>.dev www.<%= params[:vm_name] %>.dev *.<%= params[:vm_name] %>.dev)
+  config.hostmanager.aliases = %w(www.<%= params[:vm_name] %>.dev *.<%= params[:vm_name] %>.dev)
   <% end %>
