Use proper variable syntax for with_items so ansible tasks run on newer ansible versions

--- a/templates/ansible/roles/base/tasks/main.yml.erb
+++ b/templates/ansible/roles/base/tasks/main.yml.erb
@@ -28,7 +28,7 @@
 
 - name: Install additional packages
   apt: name={{ item }}
-  with_items: packages
+  with_items: '{{ packages }}'
   when: packages
 
 - name: Create application group
